--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -134,14 +134,17 @@
 </body>
 
 <script type="text/html" id="barDemo">
-    <a href="#" th:href="@{product/buy}"><i class="layui-icon" style="font-size: 30px; color: #FF5722;">&#xe698;</i></a>
+    <a href="#" th:href="@{product/buy}" id="detail">
+        <i class="layui-icon" style="font-size: 30px; color: #FF5722;">&#xe698;</i>
+    </a>
 </script>
 
 <script src="../../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
 <script type="text/javascript" th:inline="javascript">
     layui.use(['form', 'table'], function () {
         var table = layui.table
-            , form = layui.form;
+            , form = layui.form
+            , $ = layui.jquery;
 
         table.render({
             elem: '#product-list'
@@ -167,11 +170,28 @@
             , {field: 'ran_out_time', width: 120, title: '到期时间'}
             , {title: '操作', width: 87, templet: '#barDemo', fixed: "right", align: "left"}
         ]]
+        });
     });
 
+    $(document).on('click', '.layui-table>tbody>tr', function (){
+        var productCode = $(this).children().eq(1).text();
+        $.ajax({
+            type:"GET",
+            url:'/product/detail',
+            data:{
+                productCode:productCode
+            },
+        dataType:"json",
+            success: function(data) {
+            alert(122);
+        },
+        error: function(msg) {
+            alert(123);
+        }
+        });
+
 
     });
-
 
 </script>
 
