--- a/src/main/resources/templates/product/details.html
+++ b/src/main/resources/templates/product/details.html
@@ -7,6 +7,17 @@
     <script type="text/javascript" src="../../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
     <script type="text/javascript" src="../../static/js/jquery-3.3.1.js" th:src="@{/js/jquery-3.3.1.js}"></script>
     <link rel="stylesheet" href="../../static/layui/css/layui.css" th:href="@{/layui/css/layui.css}"/>
+    <style>
+        .sidebar_per dd.sidebar_articles{
+            /*background:url("../images/a.png") no-repeat scroll -178px -66px;*/
+            height:20px;
+            line-height:20px;
+            margin:5px 5px 5px 1px;
+            overflow:hidden;
+            padding-left:20px;
+            font-size: 15px;
+        }
+    </style>
 </head>
 <style>
     @media screen and (min-width: 1000px) {
@@ -42,7 +53,7 @@
             </ul>
             <div class="layui-tab-content">
                 <div class="layui-tab-item layui-show layui-row">
-                    <div class="layui-col-md4"></div>
+                    <!--<div class="layui-col-md4"></div>-->
                     <div class="layui-col-md8 ">
                         <table class="layui-table" lay-even="" lay-skin="nob">
                             <thead>
@@ -53,30 +64,68 @@
                             <tbody>
                             <tr>
                                 <td align="center" width="90">产品名称</td>
-                                <td></td>
+                                <td th:text="${product.name}">123</td>
                                 <td align="center" width="90">产品编码</td>
-                                <td width="180">犯罪/恐怖/惊悚/悬疑/优酷出品/网络大电影</td>
+                                <td width="180" th:text="${product.productCode}">123</td>
                             </tr>
                             <tr>
                                 <td align="center" width="60">类型</td>
-                                <td>主演：唐禹哲/王丽语/王宝光</td>
+                                <td th:text="${product.type}">123</td>
                                 <td align="center" width="60">销售状态</td>
-                                <td>更新完成</td>
+                                <td th:text="${product.status}">123</td>
                             </tr>
                             <tr>
                                 <td align="center" width="60">风险等级</td>
-                                <td>大陆</td>
+                                <td th:text="${product.riskLevel}">123</td>
                                 <td align="center" width="60">收益率</td>
-                                <td>2017</td>
+                                <td th:text="${product.returnRate}+'%'">123</td>
                             </tr>
                             <tr>
                                 <td align="center" width="60">投资期限</td>
-                                <td>2017-09-22</td>
+                                <td th:text="${product.term}+'天'">2017-09-22</td>
                                 <td align="center" width="60">起购金额</td>
-                                <td>9.9</td>
+                                <td>1000</td>
                             </tr>
                             </tbody>
                         </table>
+                    </div>
+                    <div class="layui-col-md4" style="padding-left: 20px;padding-top: 10px">
+                        <div class="sidebar_per sidebar_first">
+                            <dl>
+                                <ul class="layui-tab-title">
+                                    <li class="layui-this">为你推荐</li>
+                                </ul>
+                                <dd class="sidebar_articles">
+                                    <span>04-21</span>
+                                    <a target="_blank"  href="#">1号保本收益理财产品</a>
+                                </dd>
+                                <dd class="sidebar_articles">
+                                <span>04-21</span>
+                                <a target="_blank"  href="#">1号保本收益理财产品</a>
+                                </dd>
+                                <dd class="sidebar_articles">
+                                <span>04-21</span>
+                                <a target="_blank"  href="#">1号保本收益理财产品</a>
+                                </dd>
+                                <dd class="sidebar_articles">
+                                <span>04-09</span>
+                                <a target="_blank"  href="#">1号保本收益理财产品</a>
+                                </dd>
+                                <dd class="sidebar_articles">
+                                <span>03-21</span>
+                                <a target="_blank"  href="#">1号保本收益理财产品</a>
+                                </dd>
+                                <dd class="sidebar_articles">
+                                    <span>03-21</span>
+                                    <a target="_blank"  href="#">1号保本收益理财产品</a>
+                                </dd>
+                                <dd class="sidebar_articles">
+                                    <span>03-21</span>
+                                    <a target="_blank"  href="#">1号保本收益理财产品</a>
+                                </dd>
+
+                            </dl>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -87,17 +136,21 @@
                 </ul>
                 <div class="layui-tab-content" style="max-height: 300px;overflow-y:auto">
                     <div class="layui-tab-item layui-show">
-                        <span>
-                            <a class="layui-btn layui-btn-small" style="margin: 5px;" target="_blank" href="http://play.ljthm.cn/play.html#646,0">西河口秘闻</a>
-                        </span>
+                        <div style="width: 100%;line-height: 30px;text-align: center;">
+                            <p>
+                                <span class="desc_txt" style="text-align: left;">
+                                    <span itemprop="description"> 投资有风险，理财需谨慎</span>
+                                </span>
+                            </p>
+                        </div>
+
                     </div>
                     <div class="layui-tab-item">
                         <div style="width: 100%;line-height: 30px;text-align: center;">
                             <p>
-                                <span tyle="text-align: justify;">&nbsp;</span>
                                 <span class="desc_txt" style="text-align: justify;">
-<span class="txt _desc_txt_lineHight" itemprop="description"> 竟有两具尸体，而且两具尸体的头颅都不翼而  场始于二十多年前的家族恩怨纠纷，终于浮出水面。</span>
-</span>
+                                    <span  itemprop="description">不要被预期收益率迷惑有些人往往被很高的预期收益率吸引，而忽略了产品的风险，结果造成重大损失。预期收益率并不是实际收益率，预期收益率往往是“最理想状态”下的投资收益率，而这在投资过程中出现的概率可能只有1%</span>
+                                </span>
                             </p>
                         </div>
                     </div>
@@ -111,11 +164,8 @@
     <div data-use="reward" id="cyReward" role="cylabs" style="margin-left: 40%"></div>
 
 </div>
-<script type="text/javascript" src="../../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
-<script type="text/javascript" th:inline="javascript">
-    var id = 228;
-    var AD = 7;
-    var p = 1;
+    <script type="text/javascript" src="../../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
+    <script type="text/javascript" th:inline="javascript">
     layui.use(['element', 'layedit', 'layer'], function () {
         var form = layui.form;
         var element = layui.element;
@@ -124,47 +174,7 @@
             tool: ['face', '|', 'left', 'center', 'right']
             , height: 120
         });
-
-        form.on('submit(formtijiao)', function (data) {
-
-            var pl = layedit.getContent(editIndex);
-            if (pl == "") {
-                layer.msg("请填写需要评论的内容再提交");
-                return;
-            }
-            ;
-            var code = $("#code").val();
-            if (code == "") {
-                layer.msg("请填写验证码再提交");
-                return;
-            }
-            ;
-            $.ajax({
-                url: '/pinglun.html',
-                data: {"pl": pl, "id": id, "code": code, "AD": AD},
-                type: "POST",
-                contentType: "application/json",
-                success: function (data) {
-                    if (data.status == 2) {
-                        layer.msg(data.msg, {time: 1200}, function () {
-                            location.reload();
-                        });
-                        return;
-                    }
-                    if (data.status == 1) {
-                        layer.msg(data.msg);
-                        return;
-                    }
-                }
-            });
-
-        });
     });
-
-   /* var product = [[${product}]]
-    console.log(product)
-*/
-
-
-</script>
-</body></html>
+    </script>
+    </body>
+</html>
