--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -78,6 +78,9 @@
                         <dd><a href="javascript:;" class="layui-col-md-offset2"> 日志管理</a></dd>
                     </dl>
                     <dl class="layui-nav-child">
+                        <dd><a th:href="@{/notice/list}" href="test/notice/list.html" class="layui-col-md-offset2" target="target"> 公告管理</a></dd>
+                    </dl>
+                    <dl class="layui-nav-child">
                         <dd><a th:href="@{/index/testEchart}" href="test/echartsDemo/demo-3.html" class="layui-col-md-offset2" target="target"> 测试Echart</a></dd>
                     </dl>
                 </li>
