--- a/src/main/resources/templates/trade/list.html
+++ b/src/main/resources/templates/trade/list.html
@@ -19,9 +19,16 @@
             </div>
             <a class="layui-btn search_btn" data-type="reload">搜索</a>
         </div>
+        <div class="layui-inline">
+            <a class="layui-btn layui-btn-normal addNews_btn" id="add-user">交易信息录入</a>
+        </div>
     </form>
 </blockquote>
-
+<script type="text/html" id="barDemo">
+    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
+    <a class="layui-btn layui-btn-xs" lay-event="edit" id="edit">赎回</a>
+   <!-- <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>-->
+</script>
 <table class="layui-table" id="test1" lay-filter="demo"></table>
 <table class="layui-hide" id="test"></table>
 </body>
