--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -59,6 +59,9 @@
                     <dl class="layui-nav-child">
                         <dd><a th:href="@{/trade/list}" href="project/trade.html" class="layui-col-md-offset2" target="target">交易信息管理</a></dd>
                     </dl>
+                    <dl class="layui-nav-child">
+                        <dd><a th:href="@{/trade/list}" href="project/trade.html" class="layui-col-md-offset2" target="target">交易统计分析</a></dd>
+                    </dl>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;"><i class="layui-icon menu-icon">&#xe614;</i> 系统设置</a>
