'交易信息录入'

--- a/src/main/resources/templates/trade/list.html
+++ b/src/main/resources/templates/trade/list.html
@@ -20,7 +20,7 @@
             <a class="layui-btn search_btn" data-type="reload">搜索</a>
         </div>
         <div class="layui-inline">
-            <a class="layui-btn layui-btn-normal addNews_btn" id="add-user">交易信息录入</a>
+            <a class="layui-btn layui-btn-normal addNews_btn" id="add-trade">交易信息录入</a>
         </div>
     </form>
 </blockquote>
