--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -28,6 +28,10 @@
             <a class="layui-btn layui-btn-normal addNews_btn" id="add-user">添加用户</a>
         </div>
 
+        <div class="layui-inline">
+            <a class="layui-btn layui-btn-normal addNews_btn" id="export-user">导出</a>
+        </div>
+
     </form>
 </blockquote>
 
