--- a/src/main/resources/templates/test/echartsDemo/demo-04.html
+++ b/src/main/resources/templates/test/echartsDemo/demo-04.html
@@ -15,13 +15,13 @@
     var option = {
         xAxis: {
             type: 'category',
-            data: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']
+            data: ['5.21', '5.22', '5.23', '5.24', '5.25', '5.26', '5.27']
         },
         yAxis: {
             type: 'value'
         },
         series: [{
-            data: [0.66, 0.66, 0.67, 0.61, 0.4, 0.58, 0.66],
+            data: [0.4, 0.58, 0.67, 0.67, 0.67, 0.70, 0.66],
             type: 'line'
         }]
     };
