--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -17,7 +17,10 @@
 </script>
 <script src="../../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
 <script src="../../static/js/notice/list.js" th:src="@{/js/notice/list.js}"></script>
-<button data-method="confirmTrans" class="layui-btn">配置一个透明的询问框</button>
+<div class="site-demo-button" id="layerDemo" style="margin-bottom: 0;">
+    <button data-method="offset" data-type="auto" class="layui-btn layui-btn-normal" >是否确认发布</button>
+</div>
+
 <table class="layui-table" id="test1" lay-filter="demo"></table>
 <table class="layui-hide" id="test"></table>
 </body>
