--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -93,7 +93,7 @@
     </div>
 
     <div class="layui-body">
-        <iframe name="target" frameborder="0" id="demoAdmin" style="width: 100%; height: 600px;"></iframe>
+        <iframe name="target" frameborder="0" id="demoAdmin" style="width: 100%; height: 900px;"></iframe>
     </div>
 
 </div>
@@ -106,7 +106,7 @@
     });
 
     $(document).ready(function() {
-        $("#demoAdmin").attr("src", 'layout.html')
+        $("#demoAdmin").attr("src", '/index/layout')
 
     });
 
