--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -21,7 +21,7 @@
             <div class="layui-card" style="padding: 25px">
                 <div class="layui-card-header">卡片面板</div>
                 <div class="layui-card-body">
-                    卡片式面板面板通常用于非白色背景色的主体内<br>
+                    卡片式面板面板通常用于非白色背景色的主体内<br/>
                     从而映衬出边框投影
                 </div>
             </div>
@@ -30,7 +30,7 @@
             <div class="layui-card">
                 <div class="layui-card-header">卡片面板</div>
                 <div class="layui-card-body">
-                    结合 layui 的栅格系统<br>
+                    结合 layui 的栅格系统<br/>
                     轻松实现响应式布局
                 </div>
             </div>
@@ -66,7 +66,7 @@
         <h2 class="layui-colla-title">layui 更适合哪些开发者？</h2>
         <div class="layui-colla-content">
             <p>在前端技术快速变革的今天，layui 仍然坚持语义化的组织模式，甚至于模块理念都是采用类AMD组织形式，并非是有意与时代背道而驰。layui 认为以jQuery为核心的开发方式还没有到完全消亡的时候，而早期市面上基于jQuery的UI都普通做得差强人意，所以需要有一个新的UI去重新为这一领域注入活力，并采用一些更科学的架构方式。
-                <br><br>
+                <br/><br/>
                 因此准确地说，layui 更多是面向那些追求开发简单的前端工程师们，以及所有层次的服务端程序员。</p>
         </div>
     </div>
@@ -86,7 +86,7 @@
         <h2 class="layui-colla-title">layui 更适合哪些开发者？</h2>
         <div class="layui-colla-content layui-show">
             <p>在前端技术快速变革的今天，layui 仍然坚持语义化的组织模式，甚至于模块理念都是采用类AMD组织形式，并非是有意与时代背道而驰。layui 认为以jQuery为核心的开发方式还没有到完全消亡的时候，而早期市面上基于jQuery的UI都普通做得差强人意，所以需要有一个新的UI去重新为这一领域注入活力，并采用一些更科学的架构方式。
-                <br>
+                <br/>
                 因此准确地说，layui 更多是面向那些追求开发简单的前端工程师们，以及所有层次的服务端程序员。</p>
         </div>
     </div>
@@ -174,11 +174,11 @@
     </div>
 </div>
 
-<br>
+<br/>
 <p>支持无限嵌套，应用场景非常多！</p>
 
 <script src="../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
-<script>
+<script th:inline="javascript">
     layui.use(['element', 'layer'], function(){
         var element = layui.element;
         var layer = layui.layer;
