--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../static/layui/css/layui.css" th:href="@{/layui/css/layui.css}"></link>
     <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css"></link>
     <link rel="stylesheet" href="../static/css/index/index.css" th:href="@{/css/index/index.css}"></link>
+    <link rel="stylesheet" href="../static/css/index/font.css" th:href="@{/css/index/font.css}"></link>
     <script src="../static/js/jquery-3.3.1.js" th:src="@{/js/jquery-3.3.1.js}"></script>
 </head>
 <body class="layui-layout-body">
@@ -38,7 +39,7 @@
         <div class="layui-side-scroll">
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
             <ul class="layui-nav layui-nav-tree"  lay-filter="test" lay-shrink="all">
-                <li class="layui-nav-item" id="shouye" href="www.baidu.com" target="target">首页</li>
+               <!-- <li class="layui-nav-item" id="shouye" href="www.baidu.com" target="target">首页</li>-->
                 <li class="layui-nav-item">
                    <!-- layui-nav-itemed-->
                     <a  href="javascript:;"  ><i class="layui-icon menu-icon">&#xe612;</i> 用户管理</a>
