--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -8,188 +8,250 @@
     <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css"></link>
     <link rel="stylesheet" href="../static/css/index/index.css" th:href="@{/css/index/index.css}"></link>
     <script src="../static/js/jquery-3.3.1.js" th:src="@{/js/jquery-3.3.1.js}"></script>
+    <link rel="stylesheet" href="../static/css/index/weadmin.css" th:href="@{/css/index/weadmin.css}"></link>
+    <style>
 
+            .layui-col-lg6 {
+                width: 100%;
+            }
+    </style>
 </head>
 <body>
+<blockquote class="layui-elem-quote">欢迎使用银行个人理财管理系统</blockquote>
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-    <legend>卡片面板</legend>
+    <legend>常用功能</legend>
 </fieldset>
 
 <div style="padding: 20px; background-color: #F2F2F2;">
     <div class="layui-row layui-col-space15">
-        <div class="layui-col-md6">
-            <div class="layui-card" style="padding: 25px">
-                <div class="layui-card-header">卡片面板</div>
-                <div class="layui-card-body">
-                    卡片式面板面板通常用于非白色背景色的主体内<br/>
-                    从而映衬出边框投影
-                </div>
-            </div>
-        </div>
-        <div class="layui-col-md6">
+        <div class="layui-col-md8">
             <div class="layui-card">
-                <div class="layui-card-header">卡片面板</div>
+                <div class="layui-card-header">快捷方式</div>
                 <div class="layui-card-body">
-                    结合 layui 的栅格系统<br/>
-                    轻松实现响应式布局
-                </div>
-            </div>
-        </div>
-       <!-- <div class="layui-col-md12">
-            <div class="layui-card">
-                <div class="layui-card-header">标题</div>
-                <div class="layui-card-body">
-                    内容
-                </div>
-            </div>
-        </div>-->
-    </div>
-</div>
+                    <div class="layui-carousel weadmin-shortcut" lay-filter="shortcut" lay-indicator="inside" lay-arrow="none" style="width: 100%; height: 280px;">
+                        <div carousel-item="">
+                            <ul class="layui-row layui-col-space10 layui-this">
+                                <li class="layui-col-xs3">
+                                    <a href="http://www.layui.com/doc/" target="_blank">
+                                        <i class="layui-icon">&#xe612;</i>
+                                        <cite>用户信息</cite>
+                                        <p><span>查看当前系统内的用户信息</span></p>
+                                    </a>
+                                </li>
+                                <li class="layui-col-xs3">
+                                    <a href="http://www.layui.com/admin/" target="_blank">
+                                        <i class="layui-icon">&#xe62d;</i>
+                                        <cite>理财产品</cite>
+                                        <p><span>查看目前系统内的产品信息</span></p>
+                                    </a>
+                                </li>
+                                <li class="layui-col-xs3">
+                                    <a href="http://layim.layui.com/" target="_blank">
+                                        <i class="layui-icon">&#xe606;</i>
+                                        <cite>交易信息</cite>
+                                        <p><span>查看当前系统的交易信息</span></p>
+                                    </a>
+                                </li>
+                                <li class="layui-col-xs3">
+                                    <a href="http://fly.layui.com/case/u/777504" target="_blank">
+                                        <i class="layui-icon">&#xe6c6;</i>
+                                        <cite>公告信息</cite>
+                                        <p><span>请及时查看相关公告</span></p>
+                                    </a>
+                                </li>
+                            </ul>
+                            <!--<ul class="layui-row layui-col-space10">
+                                <li class="layui-col-xs3">
+                                    <a href="https://github.com/WangEn/WeAdmin" target="_blank">
+                                        <i class="layui-icon">&#xe600;</i>
+                                        <cite>Github下载</cite>
+                                    </a>
+                                </li>
 
-<fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
-    <legend>常规折叠面板</legend>
-</fieldset>
-<div class="layui-collapse" lay-filter="test">
-    <div class="layui-colla-item">
-        <h2 class="layui-colla-title">为什么JS社区大量采用未发布或者未广泛支持的语言特性？</h2>
-        <div class="layui-colla-content">
-            <p>有不少其他答案说是因为JS太差。我下面的答案已经说了，这不是根本性的原因。但除此之外，我还要纠正一些对JS具体问题的误解。JS当初是被作为脚本语言设计的，所以某些问题并不是JS设计得差或者是JS设计者的失误。比如var的作用域问题，并不是“错误”，而是当时绝大部分脚本语言都是这样的，如perl/php/sh等。模块的问题也是，脚本语言几乎都没有模块/命名空间功能。弱类型、for-in之类的问题也是，只不过现在用那些老的脚本语言的人比较少，所以很多人都误以为是JS才有的坑。另外有人说JS是半残语言，满足不了开发需求，1999年就该死。半残这个嘛，就夸张了。JS虽然有很多问题，但是设计总体还是优秀的。——来自知乎@贺师俊</p>
-        </div>
-    </div>
-    <div class="layui-colla-item">
-        <h2 class="layui-colla-title">为什么前端工程师多不愿意用 Bootstrap 框架？</h2>
-        <div class="layui-colla-content">
-            <p>因为不适合。如果希望开发长期的项目或者制作产品类网站，那么就需要实现特定的设计，为了在维护项目中可以方便地按设计师要求快速修改样式，肯定会逐步编写出各种业务组件、工具类，相当于为项目自行开发一套框架。——来自知乎@Kayo</p>
-        </div>
-    </div>
-    <div class="layui-colla-item">
-        <h2 class="layui-colla-title">layui 更适合哪些开发者？</h2>
-        <div class="layui-colla-content">
-            <p>在前端技术快速变革的今天，layui 仍然坚持语义化的组织模式，甚至于模块理念都是采用类AMD组织形式，并非是有意与时代背道而驰。layui 认为以jQuery为核心的开发方式还没有到完全消亡的时候，而早期市面上基于jQuery的UI都普通做得差强人意，所以需要有一个新的UI去重新为这一领域注入活力，并采用一些更科学的架构方式。
-                <br/><br/>
-                因此准确地说，layui 更多是面向那些追求开发简单的前端工程师们，以及所有层次的服务端程序员。</p>
-        </div>
-    </div>
-    <div class="layui-colla-item">
-        <h2 class="layui-colla-title">贤心是男是女？</h2>
-        <div class="layui-colla-content">
-            <p>man！ 所以这个问题不要再出现了。。。</p>
-        </div>
-    </div>
-</div>
+                                <li class="layui-col-xs3">
+                                    <a href="https://gitee.com/lovetime/WeAdmin" target="_blank">
+                                        <i class="layui-icon">&#xe62c;</i>
+                                        <cite>码云下载</cite>
+                                    </a>
+                                </li>
+                                <li class="layui-col-xs3">
+                                    <a href="javascript:;" target="_blank">
+                                        <i class="layui-icon layui-icon-set"></i>
+                                        <cite>设置</cite>
+                                    </a>
+                                </li>
+                                <li class="layui-col-xs3">
+                                    <a href="javascript:;" target="_blank">
+                                        <i class="layui-icon layui-icon-set"></i>
+                                        <cite>设置</cite>
+                                    </a>
+                                </li>
 
-<fieldset class="layui-elem-field layui-field-title" style="margin-top: 50px;">
-    <legend>手风琴折叠</legend>
-</fieldset>
-<div class="layui-collapse" lay-accordion="">
-    <div class="layui-colla-item">
-        <h2 class="layui-colla-title">layui 更适合哪些开发者？</h2>
-        <div class="layui-colla-content layui-show">
-            <p>在前端技术快速变革的今天，layui 仍然坚持语义化的组织模式，甚至于模块理念都是采用类AMD组织形式，并非是有意与时代背道而驰。layui 认为以jQuery为核心的开发方式还没有到完全消亡的时候，而早期市面上基于jQuery的UI都普通做得差强人意，所以需要有一个新的UI去重新为这一领域注入活力，并采用一些更科学的架构方式。
-                <br/>
-                因此准确地说，layui 更多是面向那些追求开发简单的前端工程师们，以及所有层次的服务端程序员。</p>
-        </div>
-    </div>
-    <div class="layui-colla-item">
-        <h2 class="layui-colla-title">为什么JS社区大量采用未发布或者未广泛支持的语言特性？</h2>
-        <div class="layui-colla-content">
-            <p>有不少其他答案说是因为JS太差。我下面的答案已经说了，这不是根本性的原因。但除此之外，我还要纠正一些对JS具体问题的误解。JS当初是被作为脚本语言设计的，所以某些问题并不是JS设计得差或者是JS设计者的失误。比如var的作用域问题，并不是“错误”，而是当时绝大部分脚本语言都是这样的，如perl/php/sh等。模块的问题也是，脚本语言几乎都没有模块/命名空间功能。弱类型、for-in之类的问题也是，只不过现在用那些老的脚本语言的人比较少，所以很多人都误以为是JS才有的坑。另外有人说JS是半残语言，满足不了开发需求，1999年就该死。半残这个嘛，就夸张了。JS虽然有很多问题，但是设计总体还是优秀的。——来自知乎@贺师俊</p>
-        </div>
-    </div>
-    <div class="layui-colla-item">
-        <h2 class="layui-colla-title">为什么前端工程师多不愿意用 Bootstrap 框架？</h2>
-        <div class="layui-colla-content">
-            <p>因为不适合。如果希望开发长期的项目或者制作产品类网站，那么就需要实现特定的设计，为了在维护项目中可以方便地按设计师要求快速修改样式，肯定会逐步编写出各种业务组件、工具类，相当于为项目自行开发一套框架。——来自知乎@Kayo</p>
-        </div>
-    </div>
-    <div class="layui-colla-item">
-        <h2 class="layui-colla-title">贤心是男是女？</h2>
-        <div class="layui-colla-content">
-            <p>man！ 所以这个问题不要再出现了。。。</p>
-        </div>
-    </div>
-</div>
-<fieldset class="layui-elem-field layui-field-title" style="margin-top: 50px;">
-    <legend>面板嵌套</legend>
-</fieldset>
-<div class="layui-collapse" lay-accordion="">
-    <div class="layui-colla-item">
-        <h2 class="layui-colla-title">文豪</h2>
-        <div class="layui-colla-content layui-show">
+                            </ul>-->
 
-            <div class="layui-collapse" lay-accordion="">
-                <div class="layui-colla-item">
-                    <h2 class="layui-colla-title">唐代</h2>
-                    <div class="layui-colla-content layui-show">
-
-                        <div class="layui-collapse" lay-accordion="">
-                            <div class="layui-colla-item">
-                                <h2 class="layui-colla-title">杜甫</h2>
-                                <div class="layui-colla-content layui-show">
-                                    伟大的诗人
-                                </div>
-                            </div>
-                            <div class="layui-colla-item">
-                                <h2 class="layui-colla-title">李白</h2>
-                                <div class="layui-colla-content">
-                                    <p>据说是韩国人</p>
-                                </div>
-                            </div>
-                            <div class="layui-colla-item">
-                                <h2 class="layui-colla-title">王勃</h2>
-                                <div class="layui-colla-content">
-                                    <p>千古绝唱《滕王阁序》</p>
-                                </div>
-                            </div>
+                        </div>
+                        <div class="layui-carousel-ind">
+                            <ul>
+                                <li class="layui-this"></li>
+                                <li></li>
+                            </ul>
                         </div>
 
                     </div>
-                </div>
-                <div class="layui-colla-item">
-                    <h2 class="layui-colla-title">宋代</h2>
-                    <div class="layui-colla-content">
-                        <p>比如苏轼、李清照</p>
-                    </div>
-                </div>
-                <div class="layui-colla-item">
-                    <h2 class="layui-colla-title">当代</h2>
-                    <div class="layui-colla-content">
-                        <p>比如贤心</p>
-                    </div>
+
                 </div>
             </div>
         </div>
-    </div>
-    <div class="layui-colla-item">
-        <h2 class="layui-colla-title">科学家</h2>
-        <div class="layui-colla-content">
-            <p>伟大的科学家</p>
+        <div class="layui-col-md4">
+            <div class="layui-card">
+                <div class="layui-card-header">
+                    系统须知
+                    <i class="layui-icon" style="color: #FF5722;">&#xe756;</i>
+                </div>
+                <div class="layui-card-body layui-text weadmin-text">
+                    <p>出现问题请联系管理员</p>
+                </div>
+            </div>
         </div>
+
     </div>
-    <div class="layui-colla-item">
-        <h2 class="layui-colla-title">艺术家</h2>
-        <div class="layui-colla-content">
-            <p>浑身散发着艺术细胞</p>
-        </div>
+    <div class="layui-col-lg12 layui-collapse" style="border: none;">
+    <div class="layui-col-lg6 layui-col-md12">
+
+
+        <!--统计信息展示-->
+        <fieldset class="layui-elem-field" style="padding: 5px;">
+            <!--WeAdmin公告-->
+            <div class="layui-card">
+                <div class="layui-card-header layui-elem-quote">WeAdmin公告</div>
+                <div class="layui-card-body">
+                    <div class="layui-carousel weadmin-notice" lay-filter="notice" lay-indicator="inside" lay-arrow="none" style="width: 100%; height: 280px;">
+                        <div carousel-item="">
+                            <div class="">
+                                <a href="https://gitee.com/lovetime/WeAdmin" target="_blank" class="layui-bg-red">2018年5月26日 系统正式上线</a>
+                            </div>
+                            <div class="">
+                                <a href="http://www.layui.com/admin/" target="_blank" class="layui-bg-blue">2018年6月1日 系统进行更新</a>
+                            </div>
+                            <div class="">
+                                <a href="http://fly.layui.com/jie/24231/" target="_blank" class="layui-bg-green">更多功能，敬请期待</a>
+                            </div>
+
+                        </div>
+                        <div class="layui-carousel-ind">
+                            <ul>
+                                <li class="layui-this"></li>
+                                <li></li>
+                            </ul>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+            <!--<legend>信息统计</legend>-->
+            <blockquote class="layui-elem-quote font16">信息统计</blockquote>
+            <div class="">
+                <table class="layui-table" lay-even="">
+                    <thead>
+                    <tr>
+                        <th>统计</th>
+                        <th>用户访问量</th>
+                        <th>理财产品发行数量</th>
+                        <th>产品访问数量</th>
+                        <th>交易金额</th>
+                        <th>赎回金额</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>总数</td>
+                        <td>100</td>
+                        <td>100</td>
+                        <td>100</td>
+                        <td>100</td>
+                        <td>100</td>
+                    </tr>
+                    <tr>
+                        <td>今日</td>
+                        <td>10</td>
+                        <td>10</td>
+                        <td>10</td>
+                        <td>10</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>昨日</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>20</td>
+                    </tr>
+                    <tr>
+                        <td>本周</td>
+                        <td>70</td>
+                        <td>70</td>
+                        <td>70</td>
+                        <td>70</td>
+                        <td>70</td>
+                    </tr>
+                    <tr>
+                        <td>本月</td>
+                        <td>90</td>
+                        <td>90</td>
+                        <td>90</td>
+                        <td>90</td>
+                        <td>90</td>
+                    </tr>
+                    </tbody>
+                </table>
+
+            </div>
+        </fieldset>
     </div>
 </div>
-
-<br/>
-<p>支持无限嵌套，应用场景非常多！</p>
+</div>
 
 <script src="../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
 <script th:inline="javascript">
-    layui.use(['element', 'layer'], function(){
-        var element = layui.element;
-        var layer = layui.layer;
 
-        //监听折叠
-        element.on('collapse(test)', function(data){
-            layer.msg('展开状态：'+ data.show);
+    layui.extend({
+        admin: '{/}../static/js/admin',
+    });
+    layui.use(['jquery', 'element','util', 'admin', 'carousel'], function() {
+        var element = layui.element,
+            $ = layui.jquery,
+            carousel = layui.carousel,
+            util = layui.util,
+            admin = layui.admin;
+        //建造实例
+        carousel.render({
+            elem: '.weadmin-shortcut'
+            ,width: '100%' //设置容器宽度
+            ,arrow: 'none' //始终显示箭头
+            ,trigger: 'hover'
+            ,autoplay:false
         });
+
+        carousel.render({
+            elem: '.weadmin-notice'
+            ,width: '100%' //设置容器宽度
+            ,arrow: 'none' //始终显示箭头
+            ,trigger: 'hover'
+            ,autoplay:true
+        });
+
+        $(function(){
+            setTimeAgo(2018,0,1,13,14,0,'#firstTime');
+            setTimeAgo(2018,2,28,16,0,0,'#lastTime');
+        });
+        function setTimeAgo(y, M, d, H, m, s,id){
+            var str = util.timeAgo(new Date(y, M||0, d||1, H||0, m||0, s||0));
+            $(id).html(str);
+            console.log(str);
+        };
     });
 </script>
-
-
 </body>
 </html>
