'提取Excel公共方法'

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,6 +46,9 @@
                     <dl class="layui-nav-child">
                         <dd><a th:href="@{/user/list}" href="user/list.html" class="layui-col-md-offset2" target="target">客户列表</a></dd>
                     </dl>
+                    <dl class="layui-nav-child">
+                        <dd><a th:href="@{/user/review}" href="user/review.html" class="layui-col-md-offset2" target="target">审核客户信息</a></dd>
+                    </dl>
 
                 </li>
 
